unpackaged/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <description>Customer Location used by MPA to relate to Disaster Account Contracts</description>
    <label>MPA Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPA Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>