unpackaged/main/default/objects/Location__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact related to this location</description>
    <inlineHelpText>Contact related to this location</inlineHelpText>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>This lookup will show the contacts related to the same account as the location</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>