unpackaged/main/default/objects/Location__c/fields/Contact_Cell__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cell__c</fullName>
    <description>Phone read from related contact</description>
    <formula>Contact__r.MobilePhone</formula>
    <inlineHelpText>Phone read from related contact. Edit the contact to change the phone number</inlineHelpText>
    <label>Contact Cell</label>
    <type>Text</type>
</CustomField>