unpackaged/main/default/objects/Location__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Email address read from related contact. Edit the contact to change the email address</description>
    <formula>Contact__r.Email</formula>
    <inlineHelpText>Email address read from related contact. Edit the contact to change the email address</inlineHelpText>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>