unpackaged/main/default/objects/Location__c/fields/Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax__c</fullName>
    <description>Fax read from related contact.</description>
    <formula>Contact__r.Fax</formula>
    <inlineHelpText>Fax read from related contact. Edit the contact to change the fax number</inlineHelpText>
    <label>Contact Fax</label>
    <type>Text</type>
</CustomField>