unpackaged/main/default/objects/Location__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Phone read from related contact</description>
    <formula>Contact__r.Contact_Phone__c</formula>
    <inlineHelpText>Phone read from related contact</inlineHelpText>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>