unpackaged/main/default/objects/Location__c/fields/MPA_Disaster_Agreement__c.field-meta.xml
<CustomField>
    <fullName>MPA_Disaster_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MPA Disaster Contract</label>
    <referenceTo>Disaster_Agreement__c</referenceTo>
    <relationshipLabel>MPA Locations</relationshipLabel>
    <relationshipName>MPA_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>