unpackaged/main/default/objects/Location__c/fields/SAP_Project__c.field-meta.xml
<CustomField>
    <fullName>SAP_Project__c</fullName>
    <description>Read the SAP Project # from the Disaster Agreement</description>
    <formula>MPA_Disaster_Agreement__r.SAP_Project__c</formula>
    <label>SAP Project #</label>
    <type>Text</type>
</CustomField>