unpackaged/main/default/objects/Location__c/listViews/ActiveLocations.listView-meta.xml
<ListView>
    <fullName>ActiveLocations</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <columns>MPA_Disaster_Agreement__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Locations</label>
</ListView>