unpackaged/main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Status__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <columns>MPA_Disaster_Agreement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Locations</label>
</ListView>